--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "cloudinary": "^2.0.1",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0-rc22",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
     "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8",
@@ -58,7 +58,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
